# NIDS-Verify

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup-precommit.sh  train.py
nb/: data_analysis.ipynb  vehicle_hyperrectangle_generator.ipynb
src/: __init__.py  config.py  main.py  preprocess_cli.py
src/attacks/: __init__.py  pgd.py
src/data/: __init__.py  loader.py
src/models/: __init__.py  architectures.py  evaluation.py  manage.py  registry.py  utils.py
src/tools/: __init__.py  vehicle_hyperrectangles.py
src/tools/preprocessing/: README.md  __init__.py
src/tools/preprocessing/legacy/: extract_features.py  visualize.py
src/tools/preprocessing/pcap_processing/: __init__.py  batch_processor.py  extractor.py
src/tools/preprocessing/visualization/: __init__.py  plotter.py
src/training/: __init__.py  trainer.py
src/utils/: logging.py  performance.py
tools/: extract_features.py  split_and_extract.py  visualize.py
vehicle/: nids_hyperrectangle_spec.vcl
