[project]
name = "nids-verify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.9.0",
    "neural-structured-learning>=1.4.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.8",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "scapy>=2.6.1",
]
